# PhenylEngine

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  diff.txt  gen_embed.py  include.cmake  vcpkg.json
editor/: CMakeLists.txt
editor/introspection/src/: main.cpp  mock_clock.h  mock_renderer.h
examples/action-game/: CMakeLists.txt
examples/action-game/resources/levels/: test_level.json
examples/action-game/resources/particles/: test_system.json
examples/action-game/resources/prefabs/: block_entity.json  bullet_entity.json  bullet_particle_entity.json  test_entity.json  wall_entity.json
examples/action-game/src/: main.cpp  main.cppm
examples/action-game/src/game/: test_app.cpp  test_app.cppm  test_app.h
examples/action-game/src/util/: debug_console.cpp  debug_console.cppm  debug_console.h
examples/breakout/: CMakeLists.txt
examples/breakout/resources/levels/: main.json
examples/breakout/resources/particles/: paddle_collision.json  tile_break.json  wall_collision.json
examples/breakout/resources/prefabs/: ball.json  floor.json  paddle.json  paddle_collision_emitter.json  tile.json  tile_collision_emitter.json  wall.json  wall_collision_emitter.json
examples/breakout/src/: ball.cpp  ball.h  breakout.cpp  breakout.h  controller.cpp  controller.h  main.cpp  paddle.cpp  paddle.h  tile.cpp  tile.h  wall.cpp  wall.h
examples/model-viewer/: CMakeLists.txt
examples/model-viewer/resources/material_instances/: mat1.json  mat2.json
examples/model-viewer/src/: model_viewer.cpp
modules/audio/: CMakeLists.txt
modules/audio/include/audio/: audio_backend.h  audio_plugin.h  audio_sample.h  audio_source.h  audio_system.h
modules/audio/src/audio/: audio_plugin.cpp  audio_sample.cpp  audio_source.cpp  audio_source.h  audio_system.cpp  audio_system.h
modules/common/: CMakeLists.txt
modules/common/include/common/: debug.h  json_serializer.h  scope.h  serializer.h  serializer_intrusive.h  string_serializer.h
modules/common/include/core/: debug.h  entity.h  entity_id.h  stages.h
modules/common/src/common/: debug.cpp  json_serializer.cpp  loggers.cpp  serializer.cpp  string_serializer.cpp
modules/common/src/component/: children_view.cpp  component.cpp  entity.cpp  prefab.cpp  prefab_asset_manager.cpp  query.cpp
modules/common/src/runtime/: runtime.cpp
modules/component/: CMakeLists.txt
modules/component/include/component/: archetype.h  archetype_view.h  children_view.h  component.h  component_new.h  component_serialisation.h  component_serialiser.h  component_serializer.h  entity.h  entity_id.h  entity_view.h  fixed_component.h  forward.h  main_component.h  position.h  prefab.h  prefab_asset_manager.h  prefab_manager.h  query.h  rotation_component.h  rotation_update.h  serialisable_component.h
modules/component/include/component2/: archetype.h  archetype_view.h  children_view.h  component.h  entity2.h  prefab.h  query.h
modules/component/include/events/: object_id_swap.h
modules/component/include/physics/: collision_component.h
modules/component/src/component/: archetype.cpp  children_view.cpp  component.cpp  component_extern.cpp  component_new.cpp  entity.cpp  entity_view.cpp  main_component.cpp  position.cpp  prefab.cpp  prefab_asset_manager.cpp  prefab_manager.cpp  query.cpp  rotation_component.cpp
modules/component/src/component2/: archetype.cpp  children_view.cpp  component.cpp  entity2.cpp  prefab.cpp  query.cpp
modules/engine/: CMakeLists.txt
modules/engine/include/engine/: application.h  engine.h  forward.h  game_camera.h  game_init.h  game_object.h  key_defaults.h  key_input.h  phenyl_game.h
modules/engine/include/util/: debug_console.h
modules/engine/src/engine/: application.cpp  engine.cpp  game_camera.cpp  game_init.cpp  game_object.cpp  key_defaults.cpp  key_input.cpp  phenyl_game.cpp
modules/eventbus/: CMakeLists.txt
modules/eventbus/include/event/: event.h  event_bus.h  event_scope.h  forward.h
modules/graphics/: CMakeLists.txt
modules/graphics/backends/: CMakeLists.txt
modules/graphics/backends/api/: CMakeLists.txt
modules/graphics/backends/glfw/: CMakeLists.txt
modules/graphics/backends/opengl/: CMakeLists.txt
modules/graphics/backends/vulkan/: CMakeLists.txt
modules/graphics/include/: phenyl_graphics.h
modules/graphics/include/graphics/: abstract_render_layer.h  buffer.h  camera.h  camera_2d.h  camera_3d.h  debug_graphics.h  framebuffer.h  graphics.h  graphics_handlers.h  graphics_headers.h  graphics_init.h  graphics_new_include.h  graphics_serialize.h  graphics_update.h  image.h  material.h  phenyl_graphics.h  pipeline.h  renderer.h  shader.h  texture.h  uniform_buffer.h  viewport.h
modules/graphics/resources/materials/: blinn_phong.json
modules/graphics/resources/shaders/: blinn_phong.frag  blinn_phong.vert  box_fragment.frag  box_vertex.vert  canvas_fragment.frag  canvas_vertex.vert  debug_fragment.frag  debug_vertex.vert  mesh.frag  mesh.vert  noop_postprocess.frag  particle_fragment.frag  particle_vertex.vert  postprocess.vert  shadow_map.vert  sprite_fragment.frag  sprite_vertex.vert  text_fragment.frag  text_vertex.vert
modules/graphics/resources/themes/: default_theme.json
modules/graphics/src/graphics/: buffer.cpp  camera.cpp  camera_2d.cpp  camera_3d.cpp  component.cpp  graphics.cpp  image.cpp  (+5 more)
modules/logger/: CMakeLists.txt
modules/logger/src/: format.cpp  log_manager.cpp  log_manager.h  log_sink.cpp  logger.cpp  logging.cpp  logging_internal.cpp  logging_internal.h  properties.cpp  stream_sink.cpp  stream_sink.h
modules/maths/: CMakeLists.txt
modules/maths/src/: maths_headers.cpp
modules/physics/: CMakeLists.txt
modules/physics/src/: collisions.cpp  collisions.h  main_component.cpp  physics.cpp  physics_obj.cpp  simple_friction.cpp
modules/platform/: CMakeLists.txt
modules/runtime/: CMakeLists.txt
modules/runtime/src/: runtime.cpp  stages.cpp  system.cpp
modules/ui/: CMakeLists.txt
modules/util/: CMakeLists.txt
modules/util/src/: data.cpp  loggers.cpp  profiler.cpp  random.cpp  set_test.cpp  string_help.cpp  test_data.cpp
(+1070 files in other folders)
